# x-downloader

./: .gitignore  README.md  handover.md  pyproject.toml
release-notes/: v0.2.0.md
src/x_downloader/: cli.py  missav.py
tests/: test_cli.py  test_missav.py
