[project]
name = "x-downloader"
version = "0.1.0"
description = "CLI tool for downloading videos from X/Twitter and YouTube via yt-dlp"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "yt-dlp>=2025.3.31",
]

[project.scripts]
xdl = "x_downloader.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
